# gliksbot

./: .env.template  .gitignore  =6.1.0  CLI_README.md  COMPREHENSIVE_ANALYSIS.md  COPILOT_AGENT_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.sandbox  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  PROJECT_ANALYSIS.md  README.md  README_DEPLOY.md  README_NEW.md  README_OLD.md  backup.ps1  cli_ui.py  cli_ui.tcss  cli_ui_simple.py  codex.md  config.json  demo_cli.py  demo_system.py  deploy.ps1  dexter.bat  dexter.db  docker-compose.yml  fix-iis.ps1  health_monitor.py  install-ssl.ps1  install.bat  install.sh  install_and_run.ps1  install_and_run.py  launch.bat  launch.sh  production_setup.ps1  pyproject.toml  requirements.txt  (+12 more)
.github/: copilot-instructions.md
backend/: __init__.py  auth.py  dexter.db  main.py  requirements.txt  service.py
collaboration/: 03a3822c-eeea-4a42-96e9-2f308efb325c_analyst_proposal.txt  03a3822c-eeea-4a42-96e9-2f308efb325c_analyst_vote.txt  03a3822c-eeea-4a42-96e9-2f308efb325c_engineer_proposal.txt  03a3822c-eeea-4a42-96e9-2f308efb325c_engineer_vote.txt  03a3822c-eeea-4a42-96e9-2f308efb325c_researcher_error.txt  0e721ddb-de68-427e-83e4-790c0ab38f40_analyst_proposal.txt  0e721ddb-de68-427e-83e4-790c0ab38f40_analyst_vote.txt  0e721ddb-de68-427e-83e4-790c0ab38f40_engineer_proposal.txt  0e721ddb-de68-427e-83e4-790c0ab38f40_engineer_vote.txt  0e721ddb-de68-427e-83e4-790c0ab38f40_researcher_error.txt  19b7e3cd-32f4-4a3e-8848-9bb8e9c96d71_analyst_proposal.txt  19b7e3cd-32f4-4a3e-8848-9bb8e9c96d71_analyst_vote.txt  (+103 more)
(+1563 files in other folders)
